# deezer

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  deezer.c  deezer.vala
src/views/: window_main.vala
